--- a/about/index.html
+++ b/about/index.html
@@ -11,24 +11,24 @@
     <header id="site-header">
         <div class="container">
             <figure id="logo">
-                <a href="/" class="home-link">
-                    <img src="/images/logo.svg" alt="The Cosy Crit - Click to go home" />
+                <a href="/" class="home-link" aria-label="Click to go back to The Cosy Crit homepage">
+                    <img src="/images/logo.svg" alt="The Cosy Crit" />
                 </a>
             </figure> <!-- #logo -->
             
             <nav id="site-nav">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="/about/" class="link selected">About Us</a>
+                        <a href="/about/" class="link" aria-label="Find out more about The Cosy Crit">About Us</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/drinks/" class="link">Drinks Menu</a>
+                        <a href="/drinks/" class="link" aria-label="Read our drinks menu">Drinks Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/pastries/" class="link">Pastries Menu</a>
+                        <a href="/pastries/" class="link" aria-label="Read our pastries menu">Pastries Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/contact/" class="link">Get in Touch</a>
+                        <a href="/contact/" class="link" aria-label="Get in touch with The Cosy Crit">Get in Touch</a>
                     </li>
                 </ul> <!-- .menu -->
             </nav> <!-- #site-nav -->
@@ -78,27 +78,27 @@
             <div id="socials">
                 <ul class="networks">
                     <li class="network">
-                        <a href="https://www.facebook.com/" class="link facebook">
+                        <a href="https://www.facebook.com/" target="_blank" class="link facebook" aria-label="Find The Cosy Crit on Facebook">
                             <i class="fa-brands fa-facebook-f"></i>
                             <span class="label">Facebook</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://www.instagram.com/" class="link instagram">
+                        <a href="https://www.instagram.com/" target="_blank" class="link instagram" aria-label="Find The Cosy Crit on Instagram">
                             <i class="fa-brands fa-instagram"></i>
                             <span class="label">Instagram</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://bsky.app/" class="link bluesky">
+                        <a href="https://bsky.app/" target="_blank" class="link bluesky" aria-label="Find The Cosy Crit on Bluesky">
                             <i class="fa-brands fa-bluesky"></i>
                             <span class="label">BlueSky</span>
                         </a>
                     </li>
                     <li class="network">
-                        <a href="https://www.twitch.tv/" class="link twitch">
+                        <a href="https://www.twitch.tv/" target="_blank" class="link twitch" aria-label="What The Cosy Crit streaming on Twitch">
                             <i class="fa-brands fa-twitch"></i>
                             <span class="label">Twitch</span>
                         </a>
@@ -107,8 +107,8 @@
             </div> <!-- #socials -->
 
             <div id="copyright">
-                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/">Privacy Policy</a></p>
-                <p>Powered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="https://wearecodenation.com">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/">Nathan Hawkes</a>.</p>
+                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/" aria-label="Read our Privacy Policy">Privacy Policy</a></p>
+                <p>Powered by <a href="https://pages.github.com/" target="_blank" aria-label="Powered by GitHub Pages">GitHub Pages</a> and <a href="https://wearecodenation.com" target="_blank" aria-label="Powered by Code Nation">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/" target="_blank" aria-label="Visit the website of Nathan Hawkes, the developer of this masterpiece">Nathan Hawkes</a>.</p>
             </div>
         </div>
     </footer>
