--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <header id="site-header">
         <div class="container">
             <figure id="logo">
-                <a href="/" class="home-link">
-                    <img src="/images/logo.svg" alt="The Cosy Crit - Click to go home" />
+                <a href="/" class="home-link" aria-label="Click to go back to The Cosy Crit homepage">
+                    <img src="/images/logo.svg" alt="The Cosy Crit" />
                 </a>
             </figure> <!-- #logo -->
             
             <nav id="site-nav">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="/about/" class="link">About Us</a>
+                        <a href="/about/" class="link" aria-label="Find out more about The Cosy Crit">About Us</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/drinks/" class="link">Drinks Menu</a>
+                        <a href="/drinks/" class="link" aria-label="Read our drinks menu">Drinks Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/pastries/" class="link">Pastries Menu</a>
+                        <a href="/pastries/" class="link" aria-label="Read our pastries menu">Pastries Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/contact/" class="link">Get in Touch</a>
+                        <a href="/contact/" class="link" aria-label="Get in touch with The Cosy Crit">Get in Touch</a>
                     </li>
                 </ul> <!-- .menu -->
             </nav> <!-- #site-nav -->
@@ -77,7 +77,7 @@
                     <div class="content">
                         <h2 class="menu-title">Fuel Your Next Quest</h2>
                         <p>From critical cold brews to spellbinding matcha, our drinks menu has everything to power adventurers of all alignments. Take a peek and pick your potion!</p>
-                        <a href="/drinks/" class="menu-button">View menu</a>
+                        <a href="/drinks/" class="menu-button" aria-label="View the drinks menu for The Cosy Crit">View menu</a>
                     </div>
                 </figure> <!-- .menu.drinks -->
 
@@ -88,7 +88,7 @@
                     <div class="content">
                         <h2 class="menu-title">Roll for Sweetness</h2>
                         <p>Whether you’re after a buttery croissant or a cinnamon roll worthy of bardic inspiration, our pastries are baked daily and full of flavour. Go on—tempt fate.</p>
-                        <a href="/pastries/" class="menu-button">View menu</a>
+                        <a href="/pastries/" class="menu-button" aria-label="View the pastries menu for The Cosy Crit">View menu</a>
                     </div>
                 </figure> <!-- .menu.passtries -->
             </article> <!-- .menus -->
@@ -101,7 +101,7 @@
                     <h2>Is it your turn to roll?</h2>
                     <p>Our gaming nights are open to adventurers of all levels—whether you're a seasoned DM or still figuring out which dice is the d12. From chaotic one-shots to epic campaigns, there's always a seat at the table.</p>
                     <p>Spots fill up fast, so don’t miss your initiative!</p>
-                    <a href="/contact/" class="cta-button">Enquire within</a>
+                    <a href="/contact/" class="cta-button" aria-label="Enquire about gaming sesions at The Cosy Crit">Enquire within</a>
                 </div>
             </article> <!-- .gaming.cta -->
 
@@ -113,7 +113,7 @@
                     style="border:0;" 
                     allowfullscreen="" 
                     loading="lazy" 
-                    referrerpolicy="no-referrer-when-downgrade">
+                    referrerpolicy="no-referrer-when-downgrade" title="Map of The Cosy Crit">
                 </iframe>
             </article>
 
@@ -124,7 +124,7 @@
                             <i class="contact-icon fa-solid fa-phone-volume"></i>
                             <div class="data">
                                 <h6 class="title">Telephone</h6>
-                                <p class="info"><a href="tel:+441614960420">0161 496 0420</a></p>
+                                <p class="info"><a href="tel:+441614960420" aria-label="Call The Cosy Crit on 0161 496 0420">0161 496 0420</a></p>
                             </div>
                         </li>
 
@@ -132,7 +132,7 @@
                             <i class="contact-icon fa-solid fa-at"></i>
                             <div class="data">
                                 <h6 class="title">Email</h6>
-                                <p class="info"><a href="mailto:hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
+                                <p class="info"><a href="mailto:hithere@thecosycrit.com" aria-label="Email The Cosy Crit at hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
                             </div>
                         </li>
 
@@ -141,12 +141,12 @@
                             <div class="data">
                                 <h6 class="title">Message us on</h6>
                                 <p class="info">
-                                    <a href="https://wa.me/+447700900420" class="msg whatsapp">
+                                    <a href="https://wa.me/+447700900420" class="msg whatsapp" aria-label="Message The Cosy Crit on WhatsApp">
                                         <i class="network-icon fa-brands fa-whatsapp"></i>
                                         <span class="label">WhatsApp</span>
                                     </a>
 
-                                    <a href="https://m.me/" class="msg facebook-messenger">
+                                    <a href="https://m.me/" class="msg facebook-messenger" aria-label="Message The Cosy Crit on Facebook Messenger">
                                         <i class="network-icon fa-brands fa-facebook-messenger"></i>
                                         <span class="label">Facebook Messenger</span>
                                     </a>
@@ -203,27 +203,27 @@
             <div id="socials">
                 <ul class="networks">
                     <li class="network">
-                        <a href="https://www.facebook.com/" target="_blank" class="link facebook">
+                        <a href="https://www.facebook.com/" target="_blank" class="link facebook" aria-label="Find The Cosy Crit on Facebook">
                             <i class="fa-brands fa-facebook-f"></i>
                             <span class="label">Facebook</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://www.instagram.com/" target="_blank" class="link instagram">
+                        <a href="https://www.instagram.com/" target="_blank" class="link instagram" aria-label="Find The Cosy Crit on Instagram">
                             <i class="fa-brands fa-instagram"></i>
                             <span class="label">Instagram</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://bsky.app/" target="_blank" class="link bluesky">
+                        <a href="https://bsky.app/" target="_blank" class="link bluesky" aria-label="Find The Cosy Crit on Bluesky">
                             <i class="fa-brands fa-bluesky"></i>
                             <span class="label">BlueSky</span>
                         </a>
                     </li>
                     <li class="network">
-                        <a href="https://www.twitch.tv/" class="link twitch">
+                        <a href="https://www.twitch.tv/" target="_blank" class="link twitch" aria-label="What The Cosy Crit streaming on Twitch">
                             <i class="fa-brands fa-twitch"></i>
                             <span class="label">Twitch</span>
                         </a>
@@ -232,8 +232,8 @@
             </div> <!-- #socials -->
 
             <div id="copyright">
-                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/">Privacy Policy</a></p>
-                <p>Powered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="https://wearecodenation.com">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/">Nathan Hawkes</a>.</p>
+                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/" aria-label="Read our Privacy Policy">Privacy Policy</a></p>
+                <p>Powered by <a href="https://pages.github.com/" target="_blank" aria-label="Powered by GitHub Pages">GitHub Pages</a> and <a href="https://wearecodenation.com" target="_blank" aria-label="Powered by Code Nation">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/" target="_blank" aria-label="Visit the website of Nathan Hawkes, the developer of this masterpiece">Nathan Hawkes</a>.</p>
             </div>
         </div>
     </footer>
