--- a/contact/index.html
+++ b/contact/index.html
@@ -11,24 +11,24 @@
     <header id="site-header">
         <div class="container">
             <figure id="logo">
-                <a href="/" class="home-link">
-                    <img src="/images/logo.svg" alt="The Cosy Crit - Click to go home" />
+                <a href="/" class="home-link" aria-label="Click to go back to The Cosy Crit homepage">
+                    <img src="/images/logo.svg" alt="The Cosy Crit" />
                 </a>
             </figure> <!-- #logo -->
             
             <nav id="site-nav">
                 <ul class="menu">
                     <li class="menu-item">
-                        <a href="/about/" class="link">About Us</a>
+                        <a href="/about/" class="link" aria-label="Find out more about The Cosy Crit">About Us</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/drinks/" class="link">Drinks Menu</a>
+                        <a href="/drinks/" class="link" aria-label="Read our drinks menu">Drinks Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/pastries/" class="link">Pastries Menu</a>
+                        <a href="/pastries/" class="link" aria-label="Read our pastries menu">Pastries Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/contact/" class="link selected">Get in Touch</a>
+                        <a href="/contact/" class="link" aria-label="Get in touch with The Cosy Crit">Get in Touch</a>
                     </li>
                 </ul> <!-- .menu -->
             </nav> <!-- #site-nav -->
@@ -42,15 +42,27 @@
             </div>
         </figure>
 
-        <article class="body-text page-container contact-page">
-            <div class="container">
+        <article class="body-text contact-page">
+            <div class="container page-container">
+                <article class="map">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2371.199409194781!2d-2.2426316840786536!3d53.48075907999861!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1d6ecbff3d7%3A0x7b5f16bbef9f472b!2sManchester%20City%20Centre!5e0!3m2!1sen!2suk!4v1712739465555!5m2!1sen!2suk" 
+                        width="600" 
+                        height="450" 
+                        style="border:0;" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade" title="Map of The Cosy Crit">
+                    </iframe>
+                </article>
+
                 <aside class="details">
                     <ul class="contact-details">
                         <li class="method telephone">
                             <i class="contact-icon fa-solid fa-phone-volume"></i>
                             <div class="data">
                                 <h6 class="title">Telephone</h6>
-                                <p class="info"><a href="tel:+441614960420">0161 496 0420</a></p>
+                                <p class="info"><a href="tel:+441614960420" aria-label="Call The Cosy Crit on 0161 496 0420">0161 496 0420</a></p>
                             </div>
                         </li>
 
@@ -58,7 +70,7 @@
                             <i class="contact-icon fa-solid fa-at"></i>
                             <div class="data">
                                 <h6 class="title">Email</h6>
-                                <p class="info"><a href="mailto:hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
+                                <p class="info"><a href="mailto:hithere@thecosycrit.com" aria-label="Email The Cosy Crit at hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
                             </div>
                         </li>
 
@@ -67,12 +79,12 @@
                             <div class="data">
                                 <h6 class="title">Message us on</h6>
                                 <p class="info">
-                                    <a href="https://wa.me/+447700900420" class="msg whatsapp">
+                                    <a href="https://wa.me/+447700900420" class="msg whatsapp" aria-label="Message The Cosy Crit on WhatsApp">
                                         <i class="network-icon fa-brands fa-whatsapp"></i>
                                         <span class="label">WhatsApp</span>
                                     </a>
 
-                                    <a href="https://m.me/" class="msg facebook-messenger">
+                                    <a href="https://m.me/" class="msg facebook-messenger" aria-label="Message The Cosy Crit on Facebook Messenger">
                                         <i class="network-icon fa-brands fa-facebook-messenger"></i>
                                         <span class="label">Facebook Messenger</span>
                                     </a>
@@ -135,27 +147,27 @@
             <div id="socials">
                 <ul class="networks">
                     <li class="network">
-                        <a href="https://www.facebook.com/" class="link facebook">
+                        <a href="https://www.facebook.com/" target="_blank" class="link facebook" aria-label="Find The Cosy Crit on Facebook">
                             <i class="fa-brands fa-facebook-f"></i>
                             <span class="label">Facebook</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://www.instagram.com/" class="link instagram">
+                        <a href="https://www.instagram.com/" target="_blank" class="link instagram" aria-label="Find The Cosy Crit on Instagram">
                             <i class="fa-brands fa-instagram"></i>
                             <span class="label">Instagram</span>
                         </a>
                     </li>
 
                     <li class="network">
-                        <a href="https://bsky.app/" class="link bluesky">
+                        <a href="https://bsky.app/" target="_blank" class="link bluesky" aria-label="Find The Cosy Crit on Bluesky">
                             <i class="fa-brands fa-bluesky"></i>
                             <span class="label">BlueSky</span>
                         </a>
                     </li>
                     <li class="network">
-                        <a href="https://www.twitch.tv/" class="link twitch">
+                        <a href="https://www.twitch.tv/" target="_blank" class="link twitch" aria-label="What The Cosy Crit streaming on Twitch">
                             <i class="fa-brands fa-twitch"></i>
                             <span class="label">Twitch</span>
                         </a>
@@ -164,8 +176,8 @@
             </div> <!-- #socials -->
 
             <div id="copyright">
-                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/">Privacy Policy</a></p>
-                <p>Powered by <a href="https://pages.github.com/">GitHub Pages</a> and <a href="https://wearecodenation.com">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/">Nathan Hawkes</a>.</p>
+                <p>Copyright &copy; 2025 The Cosy Crit. All rights reserved. <a href="/privacy/" aria-label="Read our Privacy Policy">Privacy Policy</a></p>
+                <p>Powered by <a href="https://pages.github.com/" target="_blank" aria-label="Powered by GitHub Pages">GitHub Pages</a> and <a href="https://wearecodenation.com" target="_blank" aria-label="Powered by Code Nation">Code Nation</a>. Designed with <i class="heart fa-solid fa-heart"></i>. Created by <a href="https://nathanhawkes.dev/" target="_blank" aria-label="Visit the website of Nathan Hawkes, the developer of this masterpiece">Nathan Hawkes</a>.</p>
             </div>
         </div>
     </footer>
