--- a/contact/index.html
+++ b/contact/index.html
@@ -61,7 +61,7 @@
                         <li class="method telephone">
                             <i class="contact-icon fa-solid fa-phone-volume"></i>
                             <div class="data">
-                                <h6 class="title">Telephone</h6>
+                                <p class="contact-title">Telephone</h6>
                                 <p class="info"><a href="tel:+441614960420" aria-label="Call The Cosy Crit on 0161 496 0420">0161 496 0420</a></p>
                             </div>
                         </li>
@@ -69,7 +69,7 @@
                         <li class="method email">
                             <i class="contact-icon fa-solid fa-at"></i>
                             <div class="data">
-                                <h6 class="title">Email</h6>
+                                <p class="contact-title">Email</h6>
                                 <p class="info"><a href="mailto:hithere@thecosycrit.com" aria-label="Email The Cosy Crit at hithere@thecosycrit.com">hithere@thecosycrit.com</a></p>
                             </div>
                         </li>
@@ -77,7 +77,7 @@
                         <li class="method messengers">
                             <i class="contact-icon fa-solid fa-comment-dots"></i>
                             <div class="data">
-                                <h6 class="title">Message us on</h6>
+                                <p class="contact-title">Message us on</h6>
                                 <p class="info">
                                     <a href="https://wa.me/+447700900420" class="msg whatsapp" aria-label="Message The Cosy Crit on WhatsApp">
                                         <i class="network-icon fa-brands fa-whatsapp"></i>
