--- a/privacy/index.html
+++ b/privacy/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | The Cosy Crit</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/fonts/fontawesome/css/all.min.css">
+
+    <!-- jQuery -->
+    <script src="/js/jquery.min.js"></script>
+
+    <!-- Cookie Banner -->
+    <link rel="stylesheet" href="/css/silktide-consent-manager.css" />
+    <script src="/js/silktide-consent-manager.js"></script>
 </head>
 <body>
     <header id="site-header">
