--- a/contact/index.html
+++ b/contact/index.html
@@ -36,13 +36,16 @@
                         <a href="/about/" class="link" aria-label="Find out more about The Cosy Crit">About Us</a>
                     </li>
                     <li class="menu-item">
+                        <a href="/gallery/" class="link" aria-label="View some of our photos of our cafe and our game nights">Galleries</a>
+                    </li>
+                    <li class="menu-item">
                         <a href="/drinks/" class="link" aria-label="Read our drinks menu">Drinks Menu</a>
                     </li>
                     <li class="menu-item">
                         <a href="/pastries/" class="link" aria-label="Read our pastries menu">Pastries Menu</a>
                     </li>
                     <li class="menu-item">
-                        <a href="/contact/" class="link" aria-label="Get in touch with The Cosy Crit">Get in Touch</a>
+                        <a href="/contact/" class="link selected" aria-label="Get in touch with The Cosy Crit">Get in Touch</a>
                     </li>
                 </ul> <!-- .menu -->
             </nav> <!-- #site-nav -->
